# dynamic_foam

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini  vcpkg-configuration.json  vcpkg.json
apps/: CMakeLists.txt  imgui_tutorial.cpp  main.cpp  profile_triangulation.cpp  test_renderer.cpp
include/: cuda_kernels.h
include/dynamic_foam/sim2d/: adjacency.cuh  adjacency.h  bvh.cuh  collision.cuh  collision.h  collision_topology.cuh  components.h  cuda_utils.cuh  cuda_utils.h  foam.h  gpu_slab.cuh  physics.h  render.cuh  render.h  sample_foams.h  sample_scene.h  scenegraph.h  simulation.h  topology.h  triangulation.h  user_input.h  utils.h
include/dynamic_foam/sim3d/: components.h  physics.h  render.h  simulation.h  topology.h
src/: CMakeLists.txt  example.cpp  kernels.cu
src/Sim2D/: adjacency.cpp  adjacency.cu  bvh.cu  collision.cu  collision_topology.cu  gpu_slab.cu  physics.cpp  render.cpp  render.cu  sample_foams.cpp  sample_scene.cpp  simulation.cpp  simulation_gpu.cu  topology.cpp  user_input.cpp  utils.cpp
src/Sim3D/: components.cpp  physics.cpp  render.cpp  simulation.cpp  topology.cpp
